WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312475
[LBSE] Fix filter scaling
https://bugs.webkit.org/show_bug.cgi?id=312475
Summary
[LBSE] Fix filter scaling
Rob Buis
Reported
2026-04-16 08:25:11 PDT
Fix filter scaling.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-04-16 08:27:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62899
Radar WebKit Bug Importer
Comment 2
2026-04-23 08:26:12 PDT
<
rdar://problem/175429245
>
EWS
Comment 3
2026-05-28 12:17:03 PDT
Committed
314068@main
(042114aac2d9): <
https://commits.webkit.org/314068@main
> Reviewed commits have been landed. Closing PR #62899 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug