Source/WebCore/svg/SVGGraphicsElement.cpp
@@ -40,7 +40,6 @@
 #include "RenderSVGResourcePattern.h"
 #include "SVGElementTypeHelpers.h"
 #include "SVGImageElement.h"
-#include "SVGLayerTransformComputation.h"
 #include "SVGMatrix.h"
 #include "SVGNames.h"
 #include "SVGPathData.h"
@@ -48,6 +47,7 @@
 #include "SVGRenderSupport.h"
 #include "SVGSVGElement.h"
 #include "SVGStringList.h"
+#include "SVGTransformComputation.h"
 #include "Settings.h"
 #include "StyleTransformResolver.h"
 #include "TransformOperationData.h"
@@ -114,7 +114,7 @@ AffineTransform SVGGraphicsElement::computeCTM(SVGElement* element, CTMScope mod
 
         auto trackingMode { mode == CTMScope::ScreenScope ? TransformState::TrackSVGScreenCTMMatrix : TransformState::TrackSVGCTMMatrix };
         CheckedPtr stopAtRenderer = dynamicDowncast<RenderLayerModelObject>(stopAtElement ? stopAtElement->renderer() : nullptr);
-        return SVGLayerTransformComputation(*renderer).computeAccumulatedTransform(stopAtRenderer.get(), trackingMode);
+        return SVGTransformComputation(*renderer).computeAccumulatedTransform(stopAtRenderer.get(), trackingMode);
     }
 
     AffineTransform ctm;
